# coqu

./: .gitignore  README.md  SESSION_STATUS.md  SPECIFICATION.md  pyproject.toml  test_mainframe.py
scripts/: build-exe.sh  generate_parser.sh
src/coqu/: __init__.py  __main__.py  cli.py  version.py
src/coqu/cache/: __init__.py  manager.py  serializer.py
src/coqu/config/: __init__.py  config.py
src/coqu/parser/: __init__.py  ast.py  chunk_analyzer.py  cobol_parser.py  coverage.py  indexer.py  preprocessor.py
src/coqu/query/: __init__.py  engine.py  parser.py
src/coqu/query/commands/: __init__.py  base.py  copybooks.py  divisions.py  paragraphs.py  search.py  sections.py  statements.py  variables.py
src/coqu/repl/: __init__.py  commands.py  completer.py  repl.py
src/coqu/utils/: __init__.py  spinner.py
src/coqu/workspace/: __init__.py  copybook.py  program.py  workspace.py
tests/: __init__.py  conftest.py  test_parser.py  test_queries.py  test_workspace.py
tests/fixtures/: caller.cbl  dateutil.cpy  mainframe.cbl  sample.cbl
