[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coqu"
version = "1.0.0"
description = "COBOL Query Tool - ANTLR-based COBOL parser with interactive REPL"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "coqu Team" }
]
keywords = ["cobol", "parser", "antlr", "legacy", "mainframe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "antlr4-python3-runtime>=4.13.0",
    "msgpack>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
analytics = [
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
]

[project.scripts]
coqu = "coqu.cli:main"

[project.urls]
Homepage = "https://github.com/coqu/coqu"
Documentation = "https://github.com/coqu/coqu#readme"
Issues = "https://github.com/coqu/coqu/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/coqu"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
